resources/vpc.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: VPC stack with public and private subnets, route tables, NAT gateway, and internet gateway

Parameters:
  VpcCIDR:
    Type: String
  VpcName:
    Type: String
  PublicSubnet1CIDR:
    Type: String
  PublicSubnet2CIDR:
    Type: String
  PrivateSubnet1CIDR:
    Type: String
  PrivateSubnet2CIDR:
    Type: String
  AvailabilityZone1:
    Type: String
  AvailabilityZone2:
    Type: String
  InternetGatewayIG:
    Type: String

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      Tags:
        - Key: Name
          Value: !Ref VpcName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref InternetGatewayIG

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: !Ref AvailabilityZone1
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}-PublicSubnet1"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone: !Ref AvailabilityZone2
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}-PublicSubnet2"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone: !Ref AvailabilityZone1
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}-PrivateSubnet1"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZone: !Ref AvailabilityZone2
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}-PrivateSubnet2"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}-PublicRouteTable"

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}-PrivateRouteTable"

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  VpcId:
    Description: 'The VPC ID'
    Value: !Ref VPC
    Export:
      Name: !Sub "${VpcName}-VpcId"

  InternetGatewayId:
    Description: 'The Internet Gateway ID'
    Value: !Ref InternetGateway
    Export:
      Name: !Ref InternetGatewayIG

  NatGatewayId:
    Description: 'The NAT Gateway ID'
    Value: !Ref NatGateway
    Export:
      Name: !Sub "${VpcName}-NatGatewayId"

  PublicSubnet1Id:
    Description: 'The Public Subnet 1 ID'
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${VpcName}-PublicSubnet1Id"

  PublicSubnet2Id:
    Description: 'The Public Subnet 2 ID'
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${VpcName}-PublicSubnet2Id"

  PrivateSubnet1Id:
    Description: 'The Private Subnet 1 ID'
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${VpcName}-PrivateSubnet1Id"

  PrivateSubnet2Id:
    Description: 'The Private Subnet 2 ID'
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${VpcName}-PrivateSubnet2Id"

  PublicRouteTableId:
    Description: 'The Public Route Table ID'
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub "${VpcName}-PublicRouteTableId"

  PrivateRouteTableId:
    Description: 'The Private Route Table ID'
    Value: !Ref PrivateRouteTable
    Export:
      Name: !Sub "${VpcName}-PrivateRouteTableId"
